fix(i18n): add missing translations [CDS 2297]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/components/nsxt/translations/Messages_en_GB.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/components/nsxt/translations/Messages_en_GB.json
@@ -1,4 +1,4 @@
 {
-  "ovhManagerPccDashboardOptionsNsxt_name": "Network virtualisation and security platform (NSX)",
+  "ovhManagerPccDashboardOptionsNsxt_name": "Network and security virtualisation (NSX-T)",
   "ovhManagerPccDashboardOptionsNsxt_tooltip": "Enabling and disabling NSX is currently unavailable."
 }
