--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/components/nsxt/translations/Messages_it_IT.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/components/nsxt/translations/Messages_it_IT.json
@@ -1,4 +1,4 @@
 {
-  "ovhManagerPccDashboardOptionsNsxt_name": "Network virtualization and security platform (NSX)",
+  "ovhManagerPccDashboardOptionsNsxt_name": "Virtualizzazione delle reti e della sicurezza (NSX-T)",
   "ovhManagerPccDashboardOptionsNsxt_tooltip": "L'attivazione e la disattivazione di NSX non è al momento disponibile."
 }
