--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/components/nsxt/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/components/nsxt/translations/Messages_pt_PT.json
@@ -1,4 +1,4 @@
 {
-  "ovhManagerPccDashboardOptionsNsxt_name": "Network virtualization and security platform (NSX)",
-  "ovhManagerPccDashboardOptionsNsxt_tooltip": "A ativação e a desativação do NSX não estão atualmente disponíveis."
+  "ovhManagerPccDashboardOptionsNsxt_name": "Virtualização das redes e da segurança (NSX-T)",
+  "ovhManagerPccDashboardOptionsNsxt_tooltip": "A ativação e a desativação do NSX não estão disponíveis atualmente."
 }
