--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/service-pack/translations/Messages_es_ES.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/service-pack/translations/Messages_es_ES.json
@@ -2,14 +2,14 @@
   "dedicatedCloudDashboardTilesOptionsServicePack_displayName_default": "Sin opción adicional",
   "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_default": "Sin opción adicional",
   "dedicatedCloudDashboardTilesOptionsServicePack_description_default": "",
-  "dedicatedCloudDashboardTilesOptionsServicePack_displayName_nsx": "Network Virtualization Datacenter for vSphere (NSX-v)",
-  "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_nsx": "Network Virtualization Datacenter for vSphere (NSX-v)",
+  "dedicatedCloudDashboardTilesOptionsServicePack_displayName_nsx": "NSX Data Center for vSphere (NSX-V)",
+  "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_nsx": "NSX Data Center for vSphere (NSX-V)",
   "dedicatedCloudDashboardTilesOptionsServicePack_description_nsx": "Con NSX-v podrá configurar las reglas de acceso a sus redes, definir su política de seguridad y desplegar en cuestión de minutos los diferentes servicios de redes necesarios para construir su infraestructura.",
   "dedicatedCloudDashboardTilesOptionsServicePack_displayName_vrops": "vRealize Operations (vROps)",
   "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_vrops": "vRealize Operations (vROps)",
   "dedicatedCloudDashboardTilesOptionsServicePack_description_vrops": "Con vROps, podrá controlar su infraestructura, activando la monitorización de sus máquinas virtuales, detectando cualquier anomalía e identificando fácilmente los recursos que necesita para garantizar la calidad del servicio (QoS) de su plataforma.",
-  "dedicatedCloudDashboardTilesOptionsServicePack_displayName_nsx-and-vrops": "Network Virtualization Datacenter for vSphere (NSX-v) y vRealize Operations (vROps)",
-  "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_nsx-and-vrops": "Network Virtualization Datacenter for vSphere (NSX-v) y vRealize Operations (vROps)",
+  "dedicatedCloudDashboardTilesOptionsServicePack_displayName_nsx-and-vrops": "NSX Data Center for vSphere (NSX-V) y vRealize Operations (vROps)",
+  "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_nsx-and-vrops": "NSX Data Center for vSphere (NSX-V) y vRealize Operations (vROps)",
   "dedicatedCloudDashboardTilesOptionsServicePack_description_nsx-and-vrops": "Con NSX-v podrá configurar las reglas de acceso a sus redes, definir su política de seguridad y desplegar en cuestión de minutos los diferentes servicios de redes necesarios para construir su infraestructura.</p><p>Con vROps, podrá controlar su infraestructura, activando la monitorización de sus máquinas virtuales, detectando cualquier anomalía e identificando fácilmente los recursos que necesita para garantizar la calidad del servicio (QoS) de su plataforma.",
   "dedicatedCloudDashboardTilesOptionsServicePack_displayName_pcidss": "Payment Card Industry Data Security Standard (PCI DSS)",
   "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_pcidss": "Certificación Payment Card Industry Data Security Standard (PCI DSS)",
