--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/service-pack/translations/Messages_it_IT.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/service-pack/translations/Messages_it_IT.json
@@ -2,14 +2,14 @@
   "dedicatedCloudDashboardTilesOptionsServicePack_displayName_default": "Senza opzione aggiuntiva",
   "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_default": "Senza opzione aggiuntiva",
   "dedicatedCloudDashboardTilesOptionsServicePack_description_default": "",
-  "dedicatedCloudDashboardTilesOptionsServicePack_displayName_nsx": "Network Virtualization Datacenter for vSphere (NSX-v)",
-  "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_nsx": "Network Virtualization Datacenter for vSphere (NSX-v)",
+  "dedicatedCloudDashboardTilesOptionsServicePack_displayName_nsx": "NSX Data Center for vSphere (NSX-V)",
+  "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_nsx": "NSX Data Center for vSphere (NSX-V)",
   "dedicatedCloudDashboardTilesOptionsServicePack_description_nsx": "Con NSX-v configuri le regole di accesso alle tue reti, crei la tua politica di sicurezza e metti in produzione in pochi minuti i servizi di rete necessari a costruire la tua infrastruttura.",
   "dedicatedCloudDashboardTilesOptionsServicePack_displayName_vrops": "vRealize Operations (vROps)",
   "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_vrops": "vRealize Operations (vROps)",
   "dedicatedCloudDashboardTilesOptionsServicePack_description_vrops": "Grazie a VROps gestisci la tua infrastruttura, attivi il monitoraggio delle macchine virtuali, rilevi eventuali anomalie e anticipi facilmente le necessità in termini di risorse, per assicurare la qualità di servizio (QoS) della tua piattaforma.",
-  "dedicatedCloudDashboardTilesOptionsServicePack_displayName_nsx-and-vrops": "Network Virtualization Datacenter for vSphere (NSX-v) e vRealize Operations (vROps)",
-  "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_nsx-and-vrops": "Network Virtualization Datacenter for vSphere (NSX-v) e vRealize Operations (vROps)",
+  "dedicatedCloudDashboardTilesOptionsServicePack_displayName_nsx-and-vrops": "NSX Data Center for vSphere (NSX-V) e vRealize Operations (vROps)",
+  "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_nsx-and-vrops": "NSX Data Center for vSphere (NSX-V) e vRealize Operations (vROps)",
   "dedicatedCloudDashboardTilesOptionsServicePack_description_nsx-and-vrops": "Con NSX-v configuri le regole di accesso alle tue reti, crei la tua politica di sicurezza e metti in produzione in pochi minuti i servizi di rete necessari a costruire la tua infrastruttura.</p><p>Grazie a VROps gestisci la tua infrastruttura, attivi il monitoraggio delle macchine virtuali, rilevi eventuali anomalie e anticipi facilmente le necessità in termini di risorse, per assicurare la qualità di servizio (QoS) della tua piattaforma.",
   "dedicatedCloudDashboardTilesOptionsServicePack_displayName_pcidss": "Payment Card Industry Data Security Standard (PCI DSS)",
   "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_pcidss": "Certificazione Payment Card Industry Data Security Standard (PCI DSS)",
