--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/service-pack/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/service-pack/translations/Messages_pl_PL.json
@@ -2,14 +2,14 @@
   "dedicatedCloudDashboardTilesOptionsServicePack_displayName_default": "Bez dodatkowych opcji",
   "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_default": "Bez dodatkowych opcji",
   "dedicatedCloudDashboardTilesOptionsServicePack_description_default": "",
-  "dedicatedCloudDashboardTilesOptionsServicePack_displayName_nsx": "Network Virtualization Datacenter for vSphere (NSX-v)",
-  "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_nsx": "Network Virtualization Datacenter for vSphere (NSX-v)",
+  "dedicatedCloudDashboardTilesOptionsServicePack_displayName_nsx": "NSX Data Center dla vSphere (NSX-V)",
+  "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_nsx": "NSX Data Center dla vSphere (NSX-V)",
   "dedicatedCloudDashboardTilesOptionsServicePack_description_nsx": "Dzięki NSX-v skonfigurujesz reguły dostępu do sieci, stworzysz politykę bezpieczeństwa oraz wdrożysz w ciągu kilku minut usługi sieciowe niezbędne do budowania infrastruktury.",
   "dedicatedCloudDashboardTilesOptionsServicePack_displayName_vrops": "vRealize Operations (vROps)",
   "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_vrops": "vRealize Operations (vROps)",
   "dedicatedCloudDashboardTilesOptionsServicePack_description_vrops": "Dzięki vROps zarządzaj Twoją infrastrukturą, aktywuj monitoring Twoich wirtualnych maszyn, wykrywaj nieprawidłowości i korzystaj z zasobów zgodnie z Twoimi potrzebami. W ten sposób zyskujesz gwarancję jakości usług (QoS) dostarczanych przez Twoją platformę.",
-  "dedicatedCloudDashboardTilesOptionsServicePack_displayName_nsx-and-vrops": "Network Virtualization Datacenter for vSphere (NSX-v) i vRealize Operations (vROps)",
-  "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_nsx-and-vrops": "Network Virtualization Datacenter for vSphere (NSX-v) i vRealize Operations (vROps)",
+  "dedicatedCloudDashboardTilesOptionsServicePack_displayName_nsx-and-vrops": "NSX Data Center dla vSphere (NSX-V) i vRealize Operations (vROps)",
+  "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_nsx-and-vrops": "NSX Data Center dla vSphere (NSX-V) i vRealize Operations (vROps)",
   "dedicatedCloudDashboardTilesOptionsServicePack_description_nsx-and-vrops": "Dzięki NSX-v skonfigurujesz reguły dostępu do sieci, stworzysz politykę bezpieczeństwa oraz wdrożysz w ciągu kilku minut usługi sieciowe niezbędne do budowania infrastruktury.</p><p>Dzięki vROps zarządzaj Twoją infrastrukturą, aktywuj monitoring Twoich wirtualnych maszyn, wykrywaj nieprawidłowości i korzystaj z zasobów zgodnie z Twoimi potrzebami. W ten sposób zyskujesz gwarancję jakości usług (QoS) dostarczanych przez Twoją platformę.",
   "dedicatedCloudDashboardTilesOptionsServicePack_displayName_pcidss": "Payment Card Industry Data Security Standard (PCI DSS)",
   "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_pcidss": "Certyfikacja Payment Card Industry Data Security Standard (PCI DSS)",
