--- a/packages/manager/apps/dedicated/client/app/dedicatedCloud/onboarding/translations/Messages_de_DE.json
+++ b/packages/manager/apps/dedicated/client/app/dedicatedCloud/onboarding/translations/Messages_de_DE.json
@@ -1,20 +1,20 @@
 {
-  "dedicated_clouds_onboarding_title": "Unsere gemanagte Virtualisierungslösung",
-  "dedicated_clouds_onboarding_description": "Wir haben eine Plattform entwickelt, die Ihrem \"On-Prem\"-Experiment ähnelt, darunter vSphere, vCenter und vROps.",
-  "dedicated_clouds_onboarding_description2": "Mit einer Private Cloud Infrastruktur von OVHcloud profitieren Sie von einer Cloud-Dienstleistung, unserer Innovationsfähigkeit und reduzieren Ihre Kosten und Ihre Umweltauswirkungen.",
-  "dedicated_clouds_onboarding_description3": "Wir verwalten die Instandhaltung Ihrer Infrastruktur, sowohl Hard- als auch Software.",
+  "dedicated_clouds_onboarding_title": "Unsere Lösung für gemanagte Virtualisierung",
+  "dedicated_clouds_onboarding_description": "Wir haben eine Plattform entwickelt, die Ihrem „On-Prem“-Erlebnis ähnelt, einschließlich vSphere, vCenter und vROps.",
+  "dedicated_clouds_onboarding_description2": "Mit einer Private-Cloud-Infrastruktur von OVHcloud profitieren Sie neben einem Cloud-Dienst auch von unserer Innovationskraft. Außerdem reduzieren Sie Ihre Kosten und Ihre Umweltauswirkungen.",
+  "dedicated_clouds_onboarding_description3": "Wir kümmern uns um die Wartung Ihrer Infrastruktur, sowohl Hardware als auch Software.",
   "dedicated_clouds_onboarding_order": "Bestellen",
   "dedicated_clouds_onboarding_guide1_title": "Vorstellung des OVHcloud Kundencenters",
-  "dedicated_clouds_onboarding_guide1_description": "Entdecken Sie die Möglichkeiten Ihres VMware Kundencenters",
+  "dedicated_clouds_onboarding_guide1_description": "Die Möglichkeiten Ihres VMware-Kundencenters entdecken",
   "dedicated_clouds_onboarding_guide2_title": "Tanzu Kubernetes Grid",
-  "dedicated_clouds_onboarding_guide2_description": "Entdecken Sie die Tanzu Kubernetes Grid Lösung und deren Möglichkeiten zur Integration in VMware bei OVHcloud",
-  "dedicated_clouds_onboarding_guide3_title": "IP auf einer virtuellen Maschine konfigurieren",
-  "dedicated_clouds_onboarding_guide3_description": "Nachdem Sie eine virtuelle Maschine erstellt haben, können Sie dieser eine öffentliche oder private IP-Adresse zuweisen",
-  "dedicated_clouds_onboarding_us_guide1_title": "How to Access the NSX Interface",
-  "dedicated_clouds_onboarding_us_guide1_description": "NSX is a Software Defined Network (SDN) Lösung developed by VMware that is activated from the vCenter and managed directly from the vSphere interface. With NSX, you can configure rules to access your networks, create your security policy, and quickly deploy the various network services needed to build your infrastructure. This provide artikel an einleitung to the NSX interface.",
-  "dedicated_clouds_onboarding_us_guide2_title": "How to Modify the vCenter Access Policy",
-  "dedicated_clouds_onboarding_us_guide2_description": "To enhance security for your Managed Bare Metal Infrastructure, you can restrict and manage the access to vCenter. In this article: we will go over how to change the access policy for vCenter in the OVHcloud Manager.",
-  "dedicated_clouds_onboarding_us_guide3_title": "How to Authorize IP Addresses for vCenter Access",
-  "dedicated_clouds_onboarding_us_guide3_description": "Access to your vCenter environment can be restricted by allowing only bestimmte IP addresses or ranges to connect to it. In this article: we will cover how to authorize IP addresses for vCenter access in the OVHcloud Manager.",
-  "dedicated_clouds_onboarding_description4": "Sie verfügen auch über hochperformante Cloud-Dienste mit Optionen wie NSX, vSAN und Veeam Backup (für Ihre Backups) - und Zerto (für Ihren Disaster Recovery Plan)."
+  "dedicated_clouds_onboarding_guide2_description": "Die Tanzu Kubernetes Grid-Lösung und deren Möglichkeiten zur Integration in VMware on OVHcloud entdecken",
+  "dedicated_clouds_onboarding_guide3_title": "IP-Adresse auf einer virtuellen Maschine konfigurieren",
+  "dedicated_clouds_onboarding_guide3_description": "Nach der Erstellung einer virtuellen Maschine können Sie dieser eine öffentliche oder private IP-Adresse zuweisen.",
+  "dedicated_clouds_onboarding_us_guide1_title": "Erste Schritte mit NSX",
+  "dedicated_clouds_onboarding_us_guide1_description": "NSX ist eine von VMware bereitgestellte SDN-Management-Lösung (Software Defined Networking). OVHcloud bietet diesen Dienst als Ersatz für NSX-V in seinem Hosted Private Cloud powered by VMware Angebot an. Zwei Hosts werden mit jeweils einer für NSX dedizierten virtuellen Maschine bereitgestellt. So wird Redundanz sichergestellt, falls einer der Hosts ausfällt.",
+  "dedicated_clouds_onboarding_us_guide2_title": "Hier erfahren Sie, wie Sie die Zugriffsstrategie für vCenter im OVHcloud Kundencenter ändern.",
+  "dedicated_clouds_onboarding_us_guide2_description": "Um die Sicherheit Ihrer vSphere-Infrastruktur zu verbessern, können Sie den Zugang zu vCenter einschränken und verwalten.",
+  "dedicated_clouds_onboarding_us_guide3_title": "Hier erfahren Sie, wie Sie IP-Adressen die Verbindung mit vCenter erlauben können.",
+  "dedicated_clouds_onboarding_us_guide3_description": "Standardmäßig ist der Zugang zu vCenter beschränkt. Daher müssen die zur Verbindung mit dem Dienst berechtigten IP-Adressen hinzugefügt werden.",
+  "dedicated_clouds_onboarding_description4": "Sie können leistungsstarke Cloud-Dienste mit Optionen wie NSX, vSAN und Veeam Backup (für Ihre Backups) sowie Zerto (für Ihren Disaster Recovery Plan) nutzen."
 }
