--- a/packages/manager/apps/dedicated/client/app/dedicatedCloud/onboarding/translations/Messages_it_IT.json
+++ b/packages/manager/apps/dedicated/client/app/dedicatedCloud/onboarding/translations/Messages_it_IT.json
@@ -1,20 +1,20 @@
 {
   "dedicated_clouds_onboarding_title": "La nostra soluzione di virtualizzazione gestita",
-  "dedicated_clouds_onboarding_description": "Abbiamo progettato una piattaforma simile a quella utilizzata per l'esperimento \"On-Prem\", che include vSphere, vCenter e vROps.",
-  "dedicated_clouds_onboarding_description2": "Con un'infrastruttura di Cloud privato OVHcloud usufruisci di un servizio Cloud, della nostra capacità di innovazione e riduci i costi e l'impatto ambientale.",
-  "dedicated_clouds_onboarding_description3": "OVHcloud gestisce la manutenzione della tua infrastruttura sia hardware che software.",
+  "dedicated_clouds_onboarding_description": "Abbiamo progettato una piattaforma simile alla tua esperienza on-premise, inclusi vSphere, vCenter e vROps.",
+  "dedicated_clouds_onboarding_description2": "Con l'infrastruttura di Cloud privato di OVHcloud usufruisci di un servizio Cloud e della nostra capacità di innovazione, riducendo i costi e il tuo impatto ambientale.",
+  "dedicated_clouds_onboarding_description3": "OVHcloud gestisce la manutenzione della tua infrastruttura a livello hardware e software.",
   "dedicated_clouds_onboarding_order": "Ordina",
   "dedicated_clouds_onboarding_guide1_title": "Presentazione dello Spazio Cliente OVHcloud",
-  "dedicated_clouds_onboarding_guide1_description": "Scopri le funzionalità del tuo Spazio Cliente VMware",
+  "dedicated_clouds_onboarding_guide1_description": "Scopri le funzionalità dello Spazio Cliente VMware",
   "dedicated_clouds_onboarding_guide2_title": "Presentazione di Tanzu Kubernetes Grid",
   "dedicated_clouds_onboarding_guide2_description": "Scopri la soluzione Tanzu Kubernetes Grid e le sue possibilità di integrazione in VMware on OVHcloud",
   "dedicated_clouds_onboarding_guide3_title": "Configurare un IP su una macchina virtuale",
   "dedicated_clouds_onboarding_guide3_description": "Dopo aver creato una macchina virtuale, puoi assegnargli un IP pubblico o privato",
-  "dedicated_clouds_onboarding_us_guide1_title": "How to Access the NSX Interface",
-  "dedicated_clouds_onboarding_us_guide1_description": "NSX is a Software Defined Network (SDN) soluzione developed by VMware that is activated from the vCenter and managed directly from the vSphere interface. With NSX, you can configura rules to access your networks, create your security policy, and quickly deploy the various network services needed to build your infrastructure. This articolo provid an introduttion to the NSX interface.",
-  "dedicated_clouds_onboarding_us_guide2_title": "How to Modify the vCenter Access Policy",
-  "dedicated_clouds_onboarding_us_guide2_description": "To enhance security for your Managed Bare Metal infrastructure, you can limit and manage the access to vCenter. In this account, we go over how to change the access policy for vCenter in the OVHcloud Manager.",
-  "dedicated_clouds_onboarding_us_guide3_title": "How to Authorize IP Addresses for vCenter Access",
-  "dedicated_clouds_onboarding_us_guide3_description": "Access to your vCenter environment can be limited by allowing only determinati IP addresses or file to connect to it it. In this account, we will cover how to authorize for vCenter access in the OVHcloud Manager.",
-  "dedicated_clouds_onboarding_description4": "e servizi Cloud high performance, con opzioni come NSX, vSAN e Veeam Backup (per i tuoi backup) e Zerto (per il tuo Disaster Recovery Plan)."
+  "dedicated_clouds_onboarding_us_guide1_title": "Iniziare a utilizzare NSX",
+  "dedicated_clouds_onboarding_us_guide1_description": "NSX è una soluzione di gestione di rete di tipo Software Defined Networking (SDN) di VMware. OVHcloud offre questo servizio in sostituzione di NSX-v nella soluzione Hosted Private Cloud <i>powered by</i> VMware. Due host vengono configurati con una macchina virtuale dedicata a NSX su ognuno di essi, che permette la ridondanza in caso di malfunzionamento di uno degli host.",
+  "dedicated_clouds_onboarding_us_guide2_title": "Scopri come modificare la strategia di accesso per vCenter nello Spazio Cliente di OVHcloud.",
+  "dedicated_clouds_onboarding_us_guide2_description": "Per migliorare la sicurezza della tua infrastruttura vSphere è possibile limitare e gestire l'accesso a vCenter.",
+  "dedicated_clouds_onboarding_us_guide3_title": "Scopri come autorizzare determinati indirizzi IP a connettersi al vCenter.",
+  "dedicated_clouds_onboarding_us_guide3_description": "L'accesso al tuo vCenter è limitato di default. È quindi necessario aggiungere gli IP che saranno autorizzati a connettersi al servizio.",
+  "dedicated_clouds_onboarding_description4": "Usufruisci anche di servizi Cloud ad alte prestazioni, con opzioni come NSX, vSAN e Veeam Backup (per i backup) e Zerto (per i Disaster Recovery Plan)."
 }
