--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/components/nsxt/translations/Messages_de_DE.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/components/nsxt/translations/Messages_de_DE.json
@@ -1,4 +1,4 @@
 {
-  "ovhManagerPccDashboardOptionsNsxt_name": "Network virtualization and security platform (NSX)",
+  "ovhManagerPccDashboardOptionsNsxt_name": "Virtualisierung von Netzwerken und Sicherheit (NSX-T)",
   "ovhManagerPccDashboardOptionsNsxt_tooltip": "Die Aktivierung und Deaktivierung von NSX ist derzeit nicht verfügbar."
 }
