--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/components/nsxt/translations/Messages_es_ES.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/components/nsxt/translations/Messages_es_ES.json
@@ -1,4 +1,4 @@
 {
-  "ovhManagerPccDashboardOptionsNsxt_name": "Network virtualization and security platform (NSX)",
+  "ovhManagerPccDashboardOptionsNsxt_name": "Virtualización de las redes y de la seguridad (NSX-T)",
   "ovhManagerPccDashboardOptionsNsxt_tooltip": "La activación y desactivación de NSX no está disponible en este momento."
 }
