--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/components/nsxt/translations/Messages_fr_CA.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/components/nsxt/translations/Messages_fr_CA.json
@@ -1,4 +1,4 @@
 {
-  "ovhManagerPccDashboardOptionsNsxt_name": "Network virtualization and security platform (NSX)",
+  "ovhManagerPccDashboardOptionsNsxt_name": "Virtualisation des réseaux et de la sécurité (NSX-T)",
   "ovhManagerPccDashboardOptionsNsxt_tooltip": "L'activation et la désactivation de NSX n'est pas disponible pour le moment."
 }
