--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/descriptions/basic-option/translations/Messages_en_GB.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/descriptions/basic-option/translations/Messages_en_GB.json
@@ -1,6 +1,6 @@
 {
-  "ovhManagerPccDashboardOptionsDescriptionsBasicOption_name_nsx": "Network Virtualisation Datacenter for vSphere (NSX-v)",
-  "ovhManagerPccDashboardOptionsDescriptionsBasicOption_name_vrops": "vRealise Operations (vROps)",
+  "ovhManagerPccDashboardOptionsDescriptionsBasicOption_name_nsx": "NSX Data Center for vSphere (NSX-V)",
+  "ovhManagerPccDashboardOptionsDescriptionsBasicOption_name_vrops": "vRealize Operations (vROps)",
   "ovhManagerPccDashboardOptionsDescriptionsBasicOption_presentation": "Get started",
-  "ovhManagerPccDashboardOptionsDescriptionsBasicOption_name_nsx_eol": "VMware and OVHcloud will terminate NSX-v support on 15/01/2024."
+  "ovhManagerPccDashboardOptionsDescriptionsBasicOption_name_nsx_eol": "VMware and OVHcloud will close NSX-v support on 15/01/2024."
 }
