--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/descriptions/basic-option/translations/Messages_it_IT.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/descriptions/basic-option/translations/Messages_it_IT.json
@@ -1,6 +1,6 @@
 {
-  "ovhManagerPccDashboardOptionsDescriptionsBasicOption_name_nsx": "Network Virtualization Datacenter for vSphere (NSX-v)",
+  "ovhManagerPccDashboardOptionsDescriptionsBasicOption_name_nsx": "NSX Data Center for vSphere (NSX-V)",
   "ovhManagerPccDashboardOptionsDescriptionsBasicOption_name_vrops": "vRealize Operations (vROps)",
   "ovhManagerPccDashboardOptionsDescriptionsBasicOption_presentation": "Scopri",
-  "ovhManagerPccDashboardOptionsDescriptionsBasicOption_name_nsx_eol": "VMware e OVHcloud porranno fine al supporto NSX-v il 15/01/2024."
+  "ovhManagerPccDashboardOptionsDescriptionsBasicOption_name_nsx_eol": "VMware e OVHcloud metteranno fine al supporto NSX-v a partire dal 15/01/2024."
 }
