--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/descriptions/basic-option/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/descriptions/basic-option/translations/Messages_pt_PT.json
@@ -1,6 +1,6 @@
 {
-  "ovhManagerPccDashboardOptionsDescriptionsBasicOption_name_nsx": "Network Virtualization Datacenter for vSphere (NSX-v)",
+  "ovhManagerPccDashboardOptionsDescriptionsBasicOption_name_nsx": "NSX Data Center para vSphere (NSX-V)",
   "ovhManagerPccDashboardOptionsDescriptionsBasicOption_name_vrops": "vRealize Operations (vROps)",
   "ovhManagerPccDashboardOptionsDescriptionsBasicOption_presentation": "Descobrir",
-  "ovhManagerPccDashboardOptionsDescriptionsBasicOption_name_nsx_eol": "A VMware e a OVHcloud porão termo ao suporte do NSX-v em 15/01/2024."
+  "ovhManagerPccDashboardOptionsDescriptionsBasicOption_name_nsx_eol": "O VMware e a OVHcloud acabarão com o suporte do NSX-v a 15/01/2024."
 }
