--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/service-pack/translations/Messages_de_DE.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/service-pack/translations/Messages_de_DE.json
@@ -2,14 +2,14 @@
   "dedicatedCloudDashboardTilesOptionsServicePack_displayName_default": "Keine Zusatzoptionen",
   "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_default": "Keine Zusatzoptionen",
   "dedicatedCloudDashboardTilesOptionsServicePack_description_default": "",
-  "dedicatedCloudDashboardTilesOptionsServicePack_displayName_nsx": "Network Virtualization Datacenter for vSphere (NSX-v)",
-  "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_nsx": "Network Virtualization Datacenter for vSphere (NSX-v)",
+  "dedicatedCloudDashboardTilesOptionsServicePack_displayName_nsx": "NSX Data Center for vSphere (NSX-V)",
+  "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_nsx": "NSX Data Center for vSphere (NSX-V)",
   "dedicatedCloudDashboardTilesOptionsServicePack_description_nsx": "Mit NSX-v können Sie ganz einfach Zugriffsregeln zu Ihren Netzwerken konfigurieren, Ihre Sicherheitsrichtlinie erstellen und innerhalb von nur wenigen Minuten verschiedene für den Aufbau Ihrer Infrastruktur nötige Netzwerkdienste deployen.",
   "dedicatedCloudDashboardTilesOptionsServicePack_displayName_vrops": "vRealize Operations (vROps)",
   "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_vrops": "vRealize Operations (vROps)",
   "dedicatedCloudDashboardTilesOptionsServicePack_description_vrops": "Steuern Sie mithilfe von vROps Ihre Infrastruktur, aktivieren Sie das Monitoring für virtuelle Maschinen, ermitteln Sie Anomalien und planen Sie problemlos zukünftigen Ressourcenbedarf, um die Dienstqualität (QoS) Ihrer Plattform sicherzustellen.",
-  "dedicatedCloudDashboardTilesOptionsServicePack_displayName_nsx-and-vrops": "Network Virtualization Datacenter for vSphere (NSX-v) und vRealize Operations (vROps)",
-  "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_nsx-and-vrops": "Network Virtualization Datacenter for vSphere (NSX-v) und vRealize Operations (vROps)",
+  "dedicatedCloudDashboardTilesOptionsServicePack_displayName_nsx-and-vrops": "NSX Data Center for vSphere (NSX-V) und vRealize Operations (vROps)",
+  "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_nsx-and-vrops": "NSX Data Center for vSphere (NSX-V) und vRealize Operations (vROps)",
   "dedicatedCloudDashboardTilesOptionsServicePack_description_nsx-and-vrops": "Mit NSX-v können Sie ganz einfach Zugriffsregeln zu Ihren Netzwerken konfigurieren, Ihre Sicherheitsrichtlinie erstellen und innerhalb von nur wenigen Minuten verschiedene für den Aufbau Ihrer Infrastruktur nötige Netzwerkdienste deployen.</p><p>Steuern Sie mithilfe von vROps Ihre Infrastruktur, aktivieren Sie das Monitoring für virtuelle Maschinen, ermitteln Sie Anomalien und planen Sie problemlos zukünftigen Ressourcenbedarf, um die Dienstqualität (QoS) Ihrer Plattform sicherzustellen.",
   "dedicatedCloudDashboardTilesOptionsServicePack_displayName_pcidss": "Payment Card Industry Data Security Standard (PCI DSS)",
   "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_pcidss": "Payment Card Industry Data Security Standard (PCI DSS) Zertifizierung",
