--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/service-pack/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/service-pack/translations/Messages_pt_PT.json
@@ -2,14 +2,14 @@
   "dedicatedCloudDashboardTilesOptionsServicePack_displayName_default": "Sem opção adicional",
   "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_default": "Sem opção adicional",
   "dedicatedCloudDashboardTilesOptionsServicePack_description_default": "",
-  "dedicatedCloudDashboardTilesOptionsServicePack_displayName_nsx": "Network Virtualization Datacenter for vSphere (NSX-v)",
-  "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_nsx": "Network Virtualization Datacenter for vSphere (NSX-v)",
+  "dedicatedCloudDashboardTilesOptionsServicePack_displayName_nsx": "NSX Data Center para vSphere (NSX-V)",
+  "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_nsx": "NSX Data Center para vSphere (NSX-V)",
   "dedicatedCloudDashboardTilesOptionsServicePack_description_nsx": "Com o NSX-v, pode configurar as regras de acesso às suas redes, definir políticas de segurança e implementar, em poucos minutos, vários serviços de rede necessários à criação da sua infraestrutura.",
   "dedicatedCloudDashboardTilesOptionsServicePack_displayName_vrops": "vRealize Operations (vROps)",
   "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_vrops": "vRealize Operations (vROps)",
   "dedicatedCloudDashboardTilesOptionsServicePack_description_vrops": "Graças a vRops, controle a sua infraestrutura, ative a monitorização das suas máquinas virtuais, detete todas as anomalias e antecipe facilmente as suas necessidades de recursos, de forma a assegurar a qualidade de serviço (QoS) da sua plataforma.",
-  "dedicatedCloudDashboardTilesOptionsServicePack_displayName_nsx-and-vrops": "Network Virtualization Datacenter for vSphere (NSX-v) e vRealize Operations (vROps)",
-  "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_nsx-and-vrops": "Network Virtualization Datacenter for vSphere (NSX-v) e vRealize Operations (vROps)",
+  "dedicatedCloudDashboardTilesOptionsServicePack_displayName_nsx-and-vrops": "NSX Data Center para vSphere (NSX-V) e vRealize Operations (vROps)",
+  "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_nsx-and-vrops": "NSX Data Center para vSphere (NSX-V) e vRealize Operations (vROps)",
   "dedicatedCloudDashboardTilesOptionsServicePack_description_nsx-and-vrops": "Com o NSX-v, pode configurar as regras de acesso às suas redes, definir políticas de segurança e implementar, em poucos minutos, vários serviços de rede necessários à criação da sua infraestrutura.</p><p>Graças a vRops, controle a sua infraestrutura, ative a monitorização das suas máquinas virtuais, detete todas as anomalias e antecipe facilmente as suas necessidades de recursos, de forma a assegurar a qualidade de serviço (QoS) da sua plataforma.",
   "dedicatedCloudDashboardTilesOptionsServicePack_displayName_pcidss": "Payment Card Industry Data Security Standard (PCI DSS)",
   "dedicatedCloudDashboardTilesOptionsServicePack_fullDisplayName_pcidss": "Certificação Payment Card Industry Data Security Standard (PCI DSS)",
