--- a/packages/manager/apps/dedicated/client/app/dedicatedCloud/onboarding/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/dedicated/client/app/dedicatedCloud/onboarding/translations/Messages_pt_PT.json
@@ -1,20 +1,20 @@
 {
   "dedicated_clouds_onboarding_title": "A nossa solução de virtualização gerida",
-  "dedicated_clouds_onboarding_description": "Desenvolvemos uma plataforma semelhante à sua experiência \"On-Prem\", incluindo vSphere, vCenter e vROps.",
-  "dedicated_clouds_onboarding_description2": "Com uma infraestrutura de cloud privada OVHcloud, beneficia de um serviço cloud, da nossa capacidade de inovação e reduz os seus custos e o seu impacto ambiental.",
-  "dedicated_clouds_onboarding_description3": "Gerimos a manutenção da sua infraestrutura, tanto hardware como software.",
+  "dedicated_clouds_onboarding_description": "Desenvolvemos uma plataforma semelhante à sua experiência «On-Prem», incluindo vSphere, vCenter e vROps.",
+  "dedicated_clouds_onboarding_description2": "Com uma infraestrutura de cloud privada OVHcloud, beneficia de um serviço cloud, da nossa capacidade de inovação e da redução de custos e do impacto ambiental.",
+  "dedicated_clouds_onboarding_description3": "Gerimos a manutenção da sua infraestrutura, tanto em termos de hardware como de software.",
   "dedicated_clouds_onboarding_order": "Encomendar",
   "dedicated_clouds_onboarding_guide1_title": "Apresentação da Área de Cliente OVHcloud",
   "dedicated_clouds_onboarding_guide1_description": "Descubra as possibilidades da Área de Cliente VMware",
-  "dedicated_clouds_onboarding_guide2_title": "Apresentação de Tanzu Kubernetes Grid",
-  "dedicated_clouds_onboarding_guide2_description": "Descubra a solução Tanzu Kubernetes Grid e as suas possibilidades de integração na VMware em OVHcloud",
+  "dedicated_clouds_onboarding_guide2_title": "Apresentação do Tanzu Kubernetes Grid",
+  "dedicated_clouds_onboarding_guide2_description": "Descubra a solução Tanzu Kubernetes Grid e as suas possibilidades de integração no VMware on OVHcloud",
   "dedicated_clouds_onboarding_guide3_title": "Configurar um IP numa máquina virtual",
   "dedicated_clouds_onboarding_guide3_description": "Depois de criar uma máquina virtual, pode atribuir-lhe um IP público ou privado",
-  "dedicated_clouds_onboarding_us_guide1_title": "How to Access the NSX Interface",
-  "dedicated_clouds_onboarding_us_guide1_description": "NSX is a Software Defined Network (SDN) solução developed by VMware that is ativated from the vCenter and managed directly from the vSphere interface. With NSX, you can configura rules to access your networks, create your security policy, and quickly deploy the various network services needed to build your infrastructure. This art provides an introdutório to the NSX interface.",
-  "dedicated_clouds_onboarding_us_guide2_title": "How to Modify the vCenter Access Policy",
-  "dedicated_clouds_onboarding_us_guide2_description": "To enhance security for your Managed Bare Metal infrastructure, you can restrit and manage the access to vCenter. In this Article, we will go over how to change the access policy for vCenter in the OVHcloud Manager.",
-  "dedicated_clouds_onboarding_us_guide3_title": "How to Authorize IP Endereços para o vCenter Access",
-  "dedicated_clouds_onboarding_us_guide3_description": "Access to your vCenter environment can be RESTRIted by allowing only cers IP enderers or ranges to connect to it. In this Article, we will cover how to authorize endereços IP para o vCenter access in the OVHcloud Manager.",
-  "dedicated_clouds_onboarding_description4": "Beneficia igualmente de serviços cloud de alto desempenho, com opções como NSX, vSAN e Veeam Backup (para os seus backups) e Zerto (para o seu plano de recuperação de desastres)."
+  "dedicated_clouds_onboarding_us_guide1_title": "Primeiros passos com o NSX",
+  "dedicated_clouds_onboarding_us_guide1_description": "O NSX é uma solução de gestão de rede Software Defined Networking (SDN) fornecida pela VMware. A OVHcloud oferece este serviço em substituição do NSX-v na oferta Hosted Private Cloud Powered by VMware. Dois hosts são implementados com, em cada um deles, uma máquina virtual dedicada ao NSX, o que permite uma redundância em caso de falha de um dos hosts.",
+  "dedicated_clouds_onboarding_us_guide2_title": "Saiba como alterar a estratégia de acesso ao vCenter na Área de Cliente OVHcloud.",
+  "dedicated_clouds_onboarding_us_guide2_description": "Para melhorar a segurança da sua infraestrutura vSphere, pode restringir e gerir o acesso ao vCenter.",
+  "dedicated_clouds_onboarding_us_guide3_title": "Saiba como autorizar endereços IP a aceder ao vCenter.",
+  "dedicated_clouds_onboarding_us_guide3_description": "Por predefinição, o acesso ao seu vCenter é restrito. Por isso, é necessário adicionar os IP que serão autorizados a ligar-se ao serviço.",
+  "dedicated_clouds_onboarding_description4": "Além disso, também dispõe de serviços cloud de alto desempenho, bem como de opções como NSX, vSAN, Veeam Backup (para backups) e Zerto (para o seu DRP)."
 }
