Revert "fix(storage.volume-backup): update volume-backup creation message (#9292)"
This reverts commit 64dc3ac25ae18cdc2a34e8a0835b110eadc65561.

Signed-off-by: Anoop N <anoop.n@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/volume-backup/create/translations/Messages_de_DE.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/volume-backup/create/translations/Messages_de_DE.json
@@ -25,7 +25,7 @@
   "pci_projects_project_storages_volume_backup_create_step_4_title": "Benennen Sie Ihr Backup",
   "pci_projects_project_storages_volume_backup_create_step_4_input_label": "Backup-Name",
   "pci_projects_project_storages_volume_backup_create_action_create": "Backup erstellen",
-  "pci_projects_project_storages_volume_backup_create_action_create_option_volume_backup_success": "Die Erstellung Ihres Volume Backup {{ backupName }} wurde erfolgreich gestartet. Denken Sie daran, Ihr Volume mit seiner Instanz zu verbinden.",
+  "pci_projects_project_storages_volume_backup_create_action_create_option_volume_backup_success": "Volume Backup {{ backupName }} wird erstellt. Denken Sie daran, Ihr Volume wieder mit seiner Instanz zu verbinden.",
   "pci_projects_project_storages_volume_backup_create_action_create_option_volume_snapshot_success": "Backup {{ backupName }} wird erstellt.",
   "pci_projects_project_storages_volume_backup_create_action_create_volume_backup_fail": "Bei der Erstellung Ihres Backups ist ein Fehler aufgetreten: {{ errorMessage }}"
 }
