--- a/packages/manager/modules/pci/src/projects/project/storages/volume-backup/create/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/volume-backup/create/translations/Messages_en_GB.json
@@ -25,7 +25,7 @@
   "pci_projects_project_storages_volume_backup_create_step_4_title": "Name your backup",
   "pci_projects_project_storages_volume_backup_create_step_4_input_label": "Backup name",
   "pci_projects_project_storages_volume_backup_create_action_create": "Create backup",
-  "pci_projects_project_storages_volume_backup_create_action_create_option_volume_backup_success": "The creation of your Volume Backup {{ backupName }} has started successfully. Remember to attach your volume to its instance.",
+  "pci_projects_project_storages_volume_backup_create_action_create_option_volume_backup_success": "Creating your {{backupName}} Volume Backup. Remember to attach your volume to its instance.",
   "pci_projects_project_storages_volume_backup_create_action_create_option_volume_snapshot_success": "Creating your {{backupName}} backup.",
   "pci_projects_project_storages_volume_backup_create_action_create_volume_backup_fail": "An error has occurred creating your backup: {{errorMessage}}"
 }
