--- a/packages/manager/modules/pci/src/projects/project/storages/volume-backup/create/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/volume-backup/create/translations/Messages_fr_FR.json
@@ -25,7 +25,7 @@
   "pci_projects_project_storages_volume_backup_create_step_4_title": "Nommez votre sauvegarde",
   "pci_projects_project_storages_volume_backup_create_step_4_input_label": "Nom de la sauvegarde",
   "pci_projects_project_storages_volume_backup_create_action_create": "Créer la sauvegarde",
-  "pci_projects_project_storages_volume_backup_create_action_create_option_volume_backup_success": "La création de votre Volume Backup {{ backupName }} a commencé avec succès. Pensez à rattacher votre volume à son instance.",
+  "pci_projects_project_storages_volume_backup_create_action_create_option_volume_backup_success": "Votre Volume Backup {{ backupName }} est en cours de création. Pensez à rattacher votre volume à son instance.",
   "pci_projects_project_storages_volume_backup_create_action_create_option_volume_snapshot_success": "Votre sauvegarde {{ backupName }} est en cours de création.",
   "pci_projects_project_storages_volume_backup_create_action_create_volume_backup_fail": "Une erreur est survenue lors de la création de votre sauvegarde : {{ errorMessage }}"
 }
