--- a/packages/manager/modules/pci/src/projects/project/storages/volume-backup/create/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/volume-backup/create/translations/Messages_it_IT.json
@@ -25,7 +25,7 @@
   "pci_projects_project_storages_volume_backup_create_step_4_title": "Assegna un nome al backup",
   "pci_projects_project_storages_volume_backup_create_step_4_input_label": "Nome del backup",
   "pci_projects_project_storages_volume_backup_create_action_create": "Creare il backup",
-  "pci_projects_project_storages_volume_backup_create_action_create_option_volume_backup_success": "La creazione del Volume Backup {{ backupName }} è iniziata correttamente. Collega il tuo volume all'istanza associata.",
+  "pci_projects_project_storages_volume_backup_create_action_create_option_volume_backup_success": "Creazione del Volume Backup {{ backupName }} in corso... Collega il tuo volume all'istanza associata.",
   "pci_projects_project_storages_volume_backup_create_action_create_option_volume_snapshot_success": "Creazione del backup {{ backupName }} in corso...",
   "pci_projects_project_storages_volume_backup_create_action_create_volume_backup_fail": "Si è verificato un errore durante la creazione del backup: {{ errorMessage }}"
 }
